crossplane-example-manifests/eks/networking/08-route-table-private.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: sistema-gaturro-route-private
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: sistema-gaturro-nat-gw
    region: us-west-1
    routeTableIdRef:
      name: sistema-gaturro-route-table-private
  providerConfigRef:
    name: aws
